contact section done

--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
           <p class="contact__text text">Or, if you'd prefer to be contacted by E-Mail, you can do so here. Feel free to
             contact me for any topic or question through this form. I will answer you as quickly as I can.</p>
           <form action="" class="contact__form">
-            <input type="text" placeholder="Your E-Mail" class="contact__input">
-            // TODO done textarea and contact section
-            <textarea placeholder="Your message" name="" id="" cols="30" rows="15" class="contact__textarea"></textarea>
-            <button class="contact__submit">Submit</button>
+            <input type="text" name="email" placeholder="Your E-Mail" class="contact__input">
+            <textarea rows="5" name="message" placeholder="Your message" id="messageInput" class="contact__textarea"></textarea>
+            <button class="contact__submit">submit</button>
           </form>
         </div>
       </div>
