--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section class="main">
     <div class="main__container container">
       <div class="main__content">
-        <h1 class="main__title">Hey! I'm <span>liv3rise</span>, front-end developer based in Ukraine</h1>
+        <h1 class="section-title main__title">Hey! I'm <span>liv3rise</span>, front-end developer based in Ukraine</h1>
         <p class="main__text text">
           I started learning programming in 2019
           and after trying many languages ​​and technologies I fell in love with web development. Right now I'm focused
@@ -144,6 +144,11 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="footer__text">That's all for now ¯\_(ツ)_/¯ </div>
+    <div class="footer__copyright">©2023 liv3rise</div>
+  </footer>
   <script type="module" src="src/js/index.js"></script>
 </body>
 
