--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html class="theme-light" lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -76,42 +77,42 @@
 
       <div class="works__items">
         <div class="works__item">
-          <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image">
+          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image">
+          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image">
+          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image">
+          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image">
+          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image">
+          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
