theme switching done

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html class="theme-light" lang="en">
+<html class="" lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -43,6 +43,12 @@
 </head>
 
 <body>
+  <header class="header">
+    <div class="header__container container">
+      <div class="header__theme-switcher" id="themeSwitcher"></div>
+    </div>
+  </header>
+
   <section class="main">
     <div class="main__container container">
       <div class="main__content">
@@ -77,42 +83,36 @@
 
       <div class="works__items">
         <div class="works__item">
-          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
           </div>
         </div>
         <div class="works__item">
-          <!-- <img class="works__item-img" src="src/img/other/project-placeholder.webp" alt="project placeholder image"> -->
           <div class="works__item-overlay">
             <p class="works__item-text">coming<br>soon</p>
             <img class="works__item-emoji" class="emoji" src="src/img/emoji/emoji-in-clouds.webp" alt="emoji in clouds">
