--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
           <p class="contact__text text">Or, if you'd prefer to be contacted by E-Mail, you can do so here. Feel free to
             contact me for any topic or question through this form. I will answer you as quickly as I can.</p>
-          <form action="" class="contact__form" netlify>
+          <form name="contact" method="post" action="" class="contact__form" netlify>
             <input type="text" name="email" placeholder="Your E-Mail" class="contact__input">
             <textarea rows="5" name="message" placeholder="Your message" id="messageInput"
               class="contact__textarea"></textarea>
