--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="meta/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="meta/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="meta/favicon-16x16.png">
-  <link rel="manifest" href="meta/site.webmanifest">
-  <link rel="mask-icon" href="meta/safari-pinned-tab.svg" color="#222222">
-  <link rel="shortcut icon" href="meta/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/meta/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/meta/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/meta/favicon-16x16.png">
+  <link rel="manifest" href="/assets/meta/site.webmanifest">
+  <link rel="mask-icon" href="/assets/meta/safari-pinned-tab.svg" color="#222222">
+  <link rel="shortcut icon" href="/assets/meta/favicon.ico">
   <meta name="msapplication-TileColor" content="#222222">
-  <meta name="msapplication-config" content="meta/browserconfig.xml">
+  <meta name="msapplication-config" content="/assets/meta/browserconfig.xml">
   <meta name="theme-color" content="#222222">
 
   <meta name="title" content="liv3rise — Frontend Developer">
@@ -25,14 +25,14 @@
   <meta property="og:title" content="liv3rise — Frontend Developer">
   <meta property="og:description"
     content="I will be glad to cooperate with you and take part in the development of your projects! Contact me if you have a suggestion or just want to ask a question.">
-  <meta property="og:image" content="meta/og-image.webp">
+  <meta property="og:image" content="/assets/meta/og-image.webp">
 
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="http://myurl.com/">
   <meta property="twitter:title" content="liv3rise — Frontend Developer">
   <meta property="twitter:description"
     content="I will be glad to cooperate with you and take part in the development of your projects! Contact me if you have a suggestion or just want to ask a question.">
-  <meta property="twitter:image" content="meta/og-image.webp">
+  <meta property="twitter:image" content="/assets/meta/og-image.webp">
 
   <title>liv3rise — Frontend Developer</title>
 
