--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header" id="header">
     <div class="header__container container">
       <div class="header__buttons">
         <a href="#main" class="header__button header__up" id="upButton"></a>
