--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <header class="header" id="header">
     <div class="header__container container">
       <div class="header__buttons">
-        <a href="#main" class="header__button header__up" id="upButton"></a>
-        <div class="header__button header__switcher" id="themeSwitcher"></div>
+        <a href="#main" class="header__button header__up" id="upButton" data-tooltip="move up" data-tooltip-bottom></a>
+        <div class="header__button header__switcher" id="themeSwitcher" data-tooltip="theme switcher" data-tooltip-bottom></div>
       </div>
     </div>
   </header>
@@ -133,9 +133,9 @@
         <div class="contact__content" id="contact">
           <p class="contact__text text">You can contact me on the following resources...</p>
           <div class="contact__links">
-            <a class="contact__link" href="#"><img src="src/img/icons/telegram-icon.webp" alt=""></a>
-            <a class="contact__link" href="#"><img src="src/img/icons/discord-icon.webp" alt=""></a>
-            <a class="contact__link" href="#"><img src="src/img/icons/github-icon.webp" alt=""></a>
+            <a class="contact__link" href="#" data-tooltip="my telegram"><img src="src/img/icons/telegram-icon.webp" alt=""></a>
+            <a class="contact__link" href="#" data-tooltip="click to copy my discord tag" data-copy="liv3rise#5010"><img src="src/img/icons/discord-icon.webp" alt=""></a>
+            <a class="contact__link" href="#" data-tooltip="my github"><img src="src/img/icons/github-icon.webp" alt=""></a>
           </div>
           <p class="contact__text text">Or, if you'd prefer to be contacted by E-Mail, you can do so here. Feel free to
             contact me for any topic or question through this form. I will answer you as quickly as I can.</p>
