animation and additional information when sending a message through the form

--- a/index.html
+++ b/index.html
@@ -760,14 +760,27 @@
               <img src="src/img/icons/github-icon.webp" alt="">
             </a>
           </div>
-          <p class="contact__text text">Or do you prefer to contact by E-Mail? You can do it here. Feel free to contact
-            me for any topic or question through this form. I will answer you as quickly as I can.</p>
-          <form name="contact" method="post" action="" class="contact__form" netlify>
-            <input type="text" name="email" placeholder="Your E-Mail" class="contact__input">
-            <textarea rows="5" name="message" placeholder="Your message" id="messageInput"
-              class="contact__textarea"></textarea>
-            <button class="contact__submit">submit</button>
-          </form>
+          <div class="contact__form-wrapper">
+            <div id="formContainer" class="contact__form-content">
+              <p class="contact__text text">Or do you prefer to contact by E-Mail? You can do it here. Feel free to
+                contact
+                me for any topic or question through this form. I will answer you as quickly as I can.</p>
+              <form name="contact" method="post" action="" class="contact__form" netlify>
+                <input type="text" name="email" placeholder="Your E-Mail" class="contact__input">
+                <textarea rows="5" name="message" placeholder="Your message" id="messageInput"
+                  class="contact__textarea"></textarea>
+                <button class="contact__submit">submit</button>
+              </form>
+            </div>
+            <div id="finalContainer" class="contact__final-content">
+              <img src="src/img/icons/check-mark.webp" alt="">
+              <div class="text">Your message has been sent. I will try to answer you on your E-Mail
+                which you specified. If I do not answer you within 24 hours, then most likely the message did not reach me
+                for some reason. You can always contact me via Telegram or Discord by clicking on one of the buttons
+                above, there I will answer much faster.
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
