minor fixes and changed readme

--- a/index.html
+++ b/index.html
@@ -750,13 +750,13 @@
         <div class="contact__content" id="contact">
           <p class="contact__text text">You can contact me on the following resources...</p>
           <div class="contact__links">
-            <a class="contact__link" href="#" data-tooltip="my telegram">
+            <a class="contact__link" href="#" data-tooltip="my telegram (coming soon)">
               <img src="src/img/icons/telegram-icon.webp" alt="">
             </a>
             <a class="contact__link" href="#" data-tooltip="click to copy my discord tag" data-copy="liv3rise#5010">
               <img src="src/img/icons/discord-icon.webp" alt="">
             </a>
-            <a class="contact__link" href="#" data-tooltip="my github">
+            <a class="contact__link" target="_blank" href="https://github.com/liv3rise" data-tooltip="my github">
               <img src="src/img/icons/github-icon.webp" alt="">
             </a>
           </div>
