--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600&display=swap" rel="stylesheet">
 
+  <script src="js/themeSwitcher.js"></script>
+
   <script type="module" src="src/js/index.js"></script>
 </head>
 
