--- a/index.html
+++ b/index.html
@@ -773,9 +773,15 @@
                 contact
                 me for any topic or question through this form. I will answer you as quickly as I can.</p>
               <form name="contact" method="post" action="" class="contact__form" netlify>
-                <input type="text" name="email" placeholder="Your E-Mail" class="contact__input">
-                <textarea rows="5" name="message" placeholder="Your message" id="messageInput"
-                  class="contact__textarea"></textarea>
+                <div class="contact__input-wrapper">
+                  <input type="text" id="formEmail" name="email" placeholder="Your E-Mail" class="contact__input">
+                  <div class="contact__input-error">It looks like you entered the wrong E-Mail.</div>
+                </div>
+                <div class="contact__input-wrapper">
+                  <textarea rows="5" id="formMessage" name="message" placeholder="Your message" id="messageInput"
+                    class="contact__textarea"></textarea>
+                  <div class="contact__input-error">Please enter at least 30 characters.</div>
+                </div>
                 <button class="contact__submit">submit</button>
               </form>
             </div>
